# Game-in-C-

./: .gitignore  CMakeLists.txt  README.md
include/core/: Game.hpp
include/entities/: Player.hpp  Projectile.hpp
src/: Game.cpp  Game.hpp  Player.cpp  Player.hpp
src/core/: Game.cpp
src/entities/: Player.cpp  Projectile.cpp
